# couleurs.vim

./: LICENSE.txt  Makefile  README.md  generate_colorschemes.py  pyproject.toml
colors/: couleurs.vim  gris.vim
templates/: couleurs.toml  couleurs.yaml  gris.toml  gris.yaml  palette.toml  palette.yaml
